# afinador-guitarra

./: .anjuta_sym_db.db  .gitignore  Makefile.am  Makefile.in  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  afinador_guitarra
Debug/src/.deps/: main.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  afinador_guitarra.ui  main.c  main.c~
